[gd_scene load_steps=6 format=3 uid="uid://ckc1a4medb8gy"]

[ext_resource type="Texture2D" uid="uid://bmdqv6f211vcq" path="res://src/assets/logo/GrowUpPXL.png" id="1"]
[ext_resource type="Script" path="res://src/transitions/GameOver.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://oymf4sw8huot" path="res://src/assets/sounds/death.wav" id="3"]

[sub_resource type="Gradient" id="3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("3")

[node name="GameOver" type="Node2D"]
script = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
texture = SubResource("2")
region_enabled = true
region_rect = Rect2(0, 0, 3000, 3000)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="NextLevelButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 256.0
offset_right = 40.0
offset_bottom = 276.0
text = "Try again"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
autoplay = true

[node name="AbilityDash" type="Button" parent="."]
offset_left = -384.0
offset_right = -256.0
offset_bottom = 64.0
text = "Dash Attack"

[node name="LabelDash" type="Label" parent="AbilityDash"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilityLeaf1" type="Button" parent="."]
offset_left = -128.0
offset_bottom = 64.0
text = "Leaf Blast"

[node name="LabelLeaf1" type="Label" parent="AbilityLeaf1"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilityLeaf2" type="Button" parent="."]
offset_left = 64.0
offset_right = 192.0
offset_bottom = 64.0
text = "Double Leaf Blast"

[node name="LabelLeaf2" type="Label" parent="AbilityLeaf2"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilityRoot" type="Button" parent="."]
offset_left = 256.0
offset_right = 384.0
offset_bottom = 64.0
text = "Root Strike"

[node name="LabelRoot" type="Label" parent="AbilityRoot"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilityHeart1" type="Button" parent="."]
offset_left = -128.0
offset_top = -128.0
offset_bottom = -64.0
text = "Two Hearts"

[node name="LabelHeart1" type="Label" parent="AbilityHeart1"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilityHeart2" type="Button" parent="."]
offset_left = 64.0
offset_top = -128.0
offset_right = 192.0
offset_bottom = -64.0
text = "Three Hearts"

[node name="LabelHeart2" type="Label" parent="AbilityHeart2"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilityHeart3" type="Button" parent="."]
offset_left = 256.0
offset_top = -128.0
offset_right = 384.0
offset_bottom = -64.0
text = "Five Hearts"

[node name="LabelHeart3" type="Label" parent="AbilityHeart3"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilitySpeed1" type="Button" parent="."]
offset_left = -128.0
offset_top = 128.0
offset_bottom = 192.0
text = "Super Speed"

[node name="LabelSpeed1" type="Label" parent="AbilitySpeed1"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilitySpeed2" type="Button" parent="."]
offset_left = 64.0
offset_top = 128.0
offset_right = 192.0
offset_bottom = 192.0
text = "Hyper Speed"

[node name="LabelSpeed2" type="Label" parent="AbilitySpeed2"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="AbilitySpeed3" type="Button" parent="."]
offset_left = 256.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 192.0
text = "Ultra Speed"

[node name="LabelSpeed3" type="Label" parent="AbilitySpeed3"]
layout_mode = 0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 86.0

[node name="Label" type="Label" parent="."]
offset_left = -32.0
offset_top = -240.0
offset_right = 36.0
offset_bottom = -226.0
text = "YOU DIED!"

[node name="Label2" type="Label" parent="."]
offset_left = -384.0
offset_top = -128.0
offset_right = -316.0
offset_bottom = -114.0
text = "Skill Tree:"

[node name="XPLabel" type="Label" parent="."]
offset_left = -384.0
offset_top = 240.0
offset_right = -192.0
offset_bottom = 254.0

[node name="Button" type="Button" parent="."]
offset_left = 384.0
offset_top = 256.0
offset_right = 461.0
offset_bottom = 276.0
text = "Exit Game"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, -400)
scale = Vector2(2, 2)
texture = ExtResource("1")

[node name="Label4" type="Label" parent="."]
offset_left = -128.0
offset_top = -16.0
offset_right = -59.0
offset_bottom = -2.0
text = "Press Arrow Keys"

[node name="Label5" type="Label" parent="."]
offset_left = 256.0
offset_top = -16.0
offset_right = 366.0
offset_bottom = -2.0
text = "Press Space Key"

[node name="Label3" type="Label" parent="."]
offset_left = -384.0
offset_top = -16.0
offset_right = -344.0
offset_bottom = -2.0
text = "Press SHIFT"

[connection signal="pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="AbilityDash" to="." method="_on_AbilityDash_pressed"]
[connection signal="pressed" from="AbilityLeaf1" to="." method="_on_AbilityLeaf1_pressed"]
[connection signal="pressed" from="AbilityLeaf2" to="." method="_on_AbilityLeaf2_pressed"]
[connection signal="pressed" from="AbilityRoot" to="." method="_on_AbilityRoot_pressed"]
[connection signal="pressed" from="AbilityHeart1" to="." method="_on_AbilityHeart1_pressed"]
[connection signal="pressed" from="AbilityHeart2" to="." method="_on_AbilityHeart2_pressed"]
[connection signal="pressed" from="AbilityHeart3" to="." method="_on_AbilityHeart3_pressed"]
[connection signal="pressed" from="AbilitySpeed1" to="." method="_on_AbilitySpeed1_pressed"]
[connection signal="pressed" from="AbilitySpeed2" to="." method="_on_AbilitySpeed2_pressed"]
[connection signal="pressed" from="AbilitySpeed3" to="." method="_on_AbilitySpeed3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
